git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/branches/amazon_ec2_integration@10963 28e8926c-6b08-0410-baaa-805c5e19b8d6